--- a/index.html
+++ b/index.html
@@ -4,23 +4,7 @@
       PikaDude's Website
     </title>
   </head>
-  <body style="background: url(index/sources/images/background1.jpg) norepeat left top;">
-<!-- begin container -->
-<div id="container" style="width: 600px; margin: 280px auto 0;">
-
-	<!-- begin navigation -->
-	<nav id="navigation">
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</nav>
-	<!-- end navigation -->
-</div>
-<!-- end container -->
+<body style="background: url(index/sources/images/background1.jpg) norepeat left top;">
+  	memes
 </body>
 </html>
