--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       PikaDude's Website
     </title>
   </head>
-<body style="background: url(index/sources/images/background1.jpg) norepeat left top;">
+<body style="background: url(index/sources/images/background1.jpg) norepeat;">
   	memes
 </body>
 </html>
