--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      PikaDude's Website
-    </title>
-  </head>
-<body style="background: url(index/sources/images/background1.jpg) norepeat;">
-  	memes
+<head>
+<title>PikaDude - Home</title>
+</head>
+<body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
+<h1 style="text-align:center; font-size:350%;">PikaDude's Website</h1>
+<h2 stle="text-align:center; font-size:250%; 
+<p style="text-align:center; font-size:175%;">This is a work in progress, theres pretty much nothing here yet lol</p>
 </body>
 </html>
