--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
 <title>PikaDude - Home</title>
+<style>
+@font-face {
+ font-family: pixelex;
+ src: url("index\sources\fonts\pixelex.ttf"); /* For most other browsers */
+}
+.myFontClass {
+	font-family: pixelex, Arial, Helvetica, sans-serif;
+	letter-spacing: 1px;
+	color: #4D7731;
+}
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
 <h1 style="text-align:center; font-size:350%;">PikaDude's Website</h1>
