--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	letter-spacing: 1px;
 	color: #4D7731;
 }
+</style>
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
 <h1 style="text-align:center; font-size:350%;">PikaDude's Website</h1>
