--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 @font-face {
  font-family: pixelex;
- src: url("index\sources\fonts\pixelex.ttf"); /* For most other browsers */
+ src: url("index\sources\fonts\pixelex.ttf");
 }
 .myFontClass {
 	font-family: pixelex, Arial, Helvetica, sans-serif;
@@ -15,7 +15,7 @@
 </style>
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
-<h1 class="myFontClass" style="text-align:center; font-size:350%;>PikaDude's Website</h1>
-<p style="text-align:center; font-size:175%;">This is a work in progress, theres pretty much nothing here yet lol</p>
+<h1 class="myFontClass" style="text-align:center; font-size:350%;">PikaDude's Website</h1>
+<p class="myFontClass" style="text-align:center; font-size:175%;">This is a work in progress, theres pretty much nothing here yet lol</p>
 </body>
 </html>
