--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
 <title>PikaDude - Home</title>
 <style>
 @font-face {
- font-family: pixelex;
- src: url("index\sources\fonts\pixelex.ttf");
-}
-.myFontClass {
-	font-family: pixelex, Arial, Helvetica, sans-serif;
-	letter-spacing: 1px;
-	color: #4D7731;
+  font-family: 'Pixelex';
+  src: url('index/source/fonts/pixelex.ttf');
 }
 </style>
+<link rel="icon" href="index/source/icon.ico">
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
-<h1 class="myFontClass" style="text-align:center; font-size:350%;">PikaDude's Website</h1>
-<p class="myFontClass" style="text-align:center; font-size:175%;">This is a work in progress, theres pretty much nothing here yet lol</p>
+<h1 style="text-align:center; font-size:350%;">PikaDude's Website</h1>
+<p style="text-align:center; font-size:175%; font-family: 'Pixelex'">This is a work in progress, theres pretty much nothing here yet lol</p>
 </body>
 </html>
