--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   font-family: 'Pixelex';
   src: url('index/source/fonts/pixelex.ttf');
 }
+@font-face {
+  font-family: 'Joystix';
+  src: url('index/source/fonts/joystix.ttf');
+}
 </style>
 <link rel="icon" href="index/source/icon.ico">
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
 <h1 style="text-align:center; font-size:350%; font-family: 'Pixelex'">PikaDude's Website</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Pixelex'">This is a work in progress, theres pretty much nothing here yet lol</p>
+<p style="text-align:center; font-size:175%; font-family: 'Joystix'">This is a work in progress, theres pretty much nothing here yet lol</p>
 </body>
 </html>
