--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   src: url('index/source/fonts/joystix.ttf');
 }
 </style>
-<link rel="icon" href="index/source/icon.ico">
+<link rel="icon" href="index/source/images/icon.ico">
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
 <h1 style="text-align:center; font-size:350%; font-family: 'Pixelex'">PikaDude's Website</h1>
