--- a/index.html
+++ b/index.html
@@ -15,6 +15,42 @@
 <link rel="icon" href="index/source/images/icon.ico">
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
+<nav>
+  body{
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+}
+nav {
+    background-color: #333;
+    margin: 0;
+    overflow: hidden;
+}
+nav ul{
+    margin: 0;
+    padding: 0;
+}
+nav ul li {
+    /* This allow us to arrange list items in a row, without using float */
+    display: inline-block;
+    list-style-type: none;
+}
+
+/* Create a style for the first level items */
+nav > ul > li > a {
+    color: #aaa;
+    background-color:#FF0;
+    display: block;
+    line-height: 2em;
+    padding: 0.5em 0.5em;
+    text-decoration: none;
+}
+<ul>
+<li><a href="home.html">Home</a></li>
+<li><a href="blog.html">Blog</a></li>
+<li><a href="news.html">News</a></li>
+</ul>
+</nav>
 <h1 style="text-align:center; font-size:350%; font-family: 'Pixelex'">PikaDude's Website</h1>
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">This is a work in progress, theres pretty much nothing here yet lol</p>
 </body>
