--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ nav > ul > li > a {
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
 <nav>
 <ul>
-<li><a href="home.html">Home</a></li>
+<li><a href="home.html" font-family='Pixelex'>Home</a></li>
 <li><a href="blog.html">Blog</a></li>
 <li><a href="news.html">News</a></li>
 </ul>
