--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@ nav ul{
     padding: 0;
 }
 nav ul li {
-    /* This allow us to arrange list items in a row, without using float */
     display: inline-block;
     list-style-type: none;
 }
-
-/* Create a style for the first level items */
 nav > ul > li > a {
     color: #aaa;
     background-color:#000099;
@@ -46,9 +43,9 @@ nav > ul > li > a {
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
 <nav>
 <ul>
-<li><a href="home.html" font-family="Pixelex">Home</a></li>
-<li><a href="blog.html" font-family="Pixelex">Blog</a></li>
-<li><a href="news.html" font-family="Pixelex">News</a></li>
+<li><a href="home.html" font-family:"Pixelex">Home</a></li>
+<li><a href="blog.html" font-family:Pixelex">Blog</a></li>
+<li><a href="news.html" font-family:"Pixelex">News</a></li>
 </ul>
 </nav>
 <h1 style="text-align:center; font-size:350%; font-family: 'Pixelex'">PikaDude's Website</h1>
