--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ nav > ul > li > a {
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
 <nav>
 <ul>
-<li><a href="home.html"; style="font-family= 'Pixelex'">Home</a></li>
-<li><a href="blog.html"; style="font-family= 'Pixelex'">Blog</a></li>
-<li><a href="news.html"; style="font-family= 'Pixelex'">News</a></li>
+<li><a href="home.html" style="font-family: 'Pixelex'">Home</a></li>
+<li><a href="blog.html" style="font-family: 'Pixelex'">Blog</a></li>
+<li><a href="news.html" style="font-family: 'Pixelex'">News</a></li>
 </ul>
 </nav>
 <h1 style="text-align:center; font-size:350%; font-family: 'Pixelex'">PikaDude's Website</h1>
