--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ nav > ul > li > a {
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
 <nav>
 <ul>
-<li><a href="index.html" style="font-family: 'Pixelex'">Home</a></li>
-<li><a href="PikaBot01.html" style="font-family: 'Pixelex'">PikaBot01</a></li>
-<li><a href="TeamMinepixel.html" style="font-family: 'Pixelex'">Team Minepixel</a></li>
-<li><a href="YouTube.html" style="font-family: 'Pixelex'">YouTube</a></li>
+<li><a href="index.html" style="font-family: 'Joystix'">Home</a></li>
+<li><a href="PikaBot01.html" style="font-family: 'Joystix'">PikaBot01</a></li>
+<li><a href="TeamMinepixel.html" style="font-family: 'Joystix'">Team Minepixel</a></li>
+<li><a href="YouTube.html" style="font-family: 'Joystix'">YouTube</a></li>
 </ul>
 </nav>
 <h1 style="text-align:center; font-size:350%; font-family: 'Pixelex'">PikaDude's Website</h1>
