--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ nav > ul > li > a {
 <li><a href="YouTube.html" style="font-family: 'Joystix'">YouTube</a></li>
 </ul>
 </nav>
-<h1 style="text-align:center; font-size:350%; font-family: 'Pixelex'">PikaDude's Website</h1>
+<h1 style="text-align:center; font-size:350%; font-family: 'Joystix'">PikaDude's Website</h1>
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">This is a work in progress, theres pretty much nothing here yet lol</p>
 </body>
 </html>
