--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ nav > ul > li > a {
 </ul>
 </nav>
 <h1 style="text-align:center; font-size:350%; font-family: 'Joystix'">PikaDude's Website</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Joystix'">This is a work in progress, theres pretty much nothing here yet lol</p>
+<p style="text-align:center; font-size:175%; font-family: 'Joystix'">Programmer, Gamer, YouTuber and Twitch Streamer</p>
+<p style="text-align:center; font-size:175%; font-family: 'Joystix'">Direct yourself using the buttons above</p>
 </body>
 </html>
