--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ nav > ul > li > a {
 </style>
 <link rel="icon" href="index/source/images/icon.ico">
 </head>
-<body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size: 2000px 1000px;">
+<body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-repeat:no-repeat; background-size:cover;">
 <nav>
 <ul>
 <li><a href="index.html" style="font-family: 'Joystix'">Home</a></li>
@@ -52,6 +52,6 @@ nav > ul > li > a {
 <h1 style="text-align:center; font-size:350%; font-family: 'Joystix'">PikaDude's Website</h1>
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">Programmer, Gamer, YouTuber and Twitch Streamer</p>
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">Direct yourself using the buttons above</p>
-<img align="middle" src="index/source/images/icon.ico" alt="PikaDude" height="400" width="400" > 
+<img align="middle" src="index/source/images/icon.ico" alt="PikaDude" height="200" width="200" > 
 </body>
 </html>
