--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@ nav > ul > li > a {
 <h1 style="text-align:center; font-size:350%; font-family: 'Joystix'">PikaDude's Website</h1>
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">Programmer, Gamer, YouTuber and Twitch Streamer</p>
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">Direct yourself using the buttons above</p>
-<img style="text-align: center;" src="index/source/images/icon.ico" alt="PikaDude" height="200" width="200" > 
+<img style="text-align: center; position: absolute; left: 0;" src="index/source/images/icon.ico" alt="PikaDude" height="200" width="200" > 
 </body>
 </html>
