--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>Its a feature</title>
+<title>PikaDude - PikaBot01</title>
 <head>
 <body>
-Its not done yet!
+<a href="http://www.w3schools.com">"<<--- Back to index"</a>
 </body>
 </html>
