--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -3,6 +3,6 @@
 <title>PikaDude - PikaBot01</title>
 <head>
 <body>
-<a href="http://www.w3schools.com"><-- Back to index</a>
+<a href="http://www.w3schools.com" style="font-family: 'Joystix' "><-- Back to index</a>
 </body>
 </html>
