--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 <title>PikaDude - PikaBot01</title>
+@font-face {
+  font-family: 'Joystix';
+  src: url('index/source/fonts/joystix.ttf');
+}
 <head>
 <body>
 <a href="../index.html" style="font-family: 'Joystix' "><-- Back to index</a>
