--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -7,6 +7,6 @@
 }
 <head>
 <body>
-<a href="../index.html" style="font-family: 'Joystix' "><-- Back to index</a>
+<a href="../index.html" style="font-family: 'Joystix' "><<Back to index</a>
 </body>
 </html>
