--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -1,10 +1,12 @@
 <html>
 <head>
 <title>PikaDude - PikaBot01</title>
+<style>
 @font-face {
   font-family: 'Joystix';
   src: url('index/source/fonts/joystix.ttf');
 }
+</style>
 <head>
 <body>
 <a href="../index.html" style="font-family: 'Joystix' "><<Back to index</a>
