--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -8,6 +8,15 @@
 }
 </style>
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
+  a {
+    text-decoration: none;
+}
+a:link, a:visited {
+    color: blue;
+}
+a:hover {
+    color: red;
+}
 <head>
 <body>
 </body>
