--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -10,5 +10,26 @@
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
 <head>
 <body>
+<div id="menu">
+<ul>
+<li><a href="index.html">Home</a></li>
+<ul><li><a href="aboutus.html">About Us</a></li>
+<li><a href="services.html">Services</a></li>
+<li><a href="contactus.html">Contact Us</a></li>
+</ul>
+</div>
+<style>
+  #menu {
+    width: 550px;
+    height: 35px;
+    font-size: 16px;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 3px 2px 3px #333333;
+    background-color: #8AD9FF;
+        border-radius: 8px;
+}
+</style>
 </body>
 </html>
