--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -24,7 +24,7 @@
     width: 550px;
     height: 35px;
     font-size: 16px;
-    font-family: Tahoma, Geneva, sans-serif;
+    font-family: Arial;
     font-weight: bold;
     text-align: center;
     text-shadow: 3px 2px 3px #333333;
