--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -13,7 +13,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #8c8c8c;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -32,11 +32,11 @@ li a {
 }
 
 li a:hover:not(.active) {
-    background-color: #111;
+    background-color: #8c8c8c;
 }
 
 .active {
-    background-color: #4CAF50;
+    background-color: #262626;
 }
 </style>
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
