--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -38,6 +38,10 @@ li a:hover:not(.active) {
 .active {
     background-color: #262626;
 }
+
+.nav a:hover {
+  background-color: #005f5f;
+}
 </style>
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
 </head>
