--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -39,7 +39,7 @@ li a:hover:not(.active) {
     background-color: #262626;
 }
 
-li a:hover {
+ul a:hover {
   background-color: #005f5f;
 }
 </style>
