--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -8,7 +8,7 @@
 }
 body {margin:0;}
 
-ul {
+ul menu{
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -39,7 +39,7 @@ li a:hover:not(.active) {
     background-color: #262626;
 }
 
-ul a:hover {
+ul menu:hover {
   background-color: #005f5f;
 }
 </style>
