--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -8,12 +8,12 @@
 }
 body {margin:0;}
 
-ul menu{
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #8c8c8c;
+    background-color: #262626;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -32,15 +32,11 @@ li a {
 }
 
 li a:hover:not(.active) {
-    background-color: #8c8c8c;
-}
-
-.active {
     background-color: #262626;
 }
 
-ul menu:hover {
-  background-color: #005f5f;
+.active {
+    background-color: #8c8c8c;
 }
 </style>
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
