--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -36,7 +36,7 @@ li a:hover:not(.active) {
 }
 
 .active {
-    background-color: #8c8c8c;
+    background-color: #0066ff;
 }
 </style>
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
