added another font also did some stuff

--- a/PikaBot01.html
+++ b/PikaBot01.html
@@ -4,7 +4,11 @@
 <style>
 @font-face {
   font-family: 'Joystix';
-  src: url('index/source/fonts/joystix.ttf');
+  src: url('PikaBot01/source/fonts/joystix.ttf');
+}
+@font-face {
+  font-family: 'Techover';
+  src: url('PikaBot01/source/fonts/techover.ttf');
 }
 body {margin:0;}
 
@@ -43,10 +47,10 @@ li a:hover:not(.active) {
 </head>
 <body>
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a class="active" href="#home" style="font-family: 'Techover'">Home</a></li>
+  <li><a href="#news" style="font-family: 'Techover'">News</a></li>
+  <li><a href="#contact" style="font-family: 'Techover'">Contact</a></li>
+  <li><a href="#about" style="font-family: 'Techover'">About</a></li>
 </ul>
 </body>
 </html>
