why do i really need comments? this isnt open source.. right?

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ nav > ul > li > a {
 </style>
 <link rel="icon" href="index/source/images/icon.ico">
 </head>
-<body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-repeat:no-repeat; background-size:cover;">
+<body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size:cover;">
 <nav>
 <ul>
 <li><a href="index.html" style="font-family: 'Joystix'">Home</a></li>
