--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ nav > ul > li > a {
 <nav>
 <ul>
 <li><a href="index.html" style="font-family: 'Joystix'">Home</a></li>
-<li><a href="PikaBot01.html" style="font-family: 'Joystix'">PikaBot01</a></li>
+<li><a href="PikaBot01/home.html" style="font-family: 'Joystix'">PikaBot01</a></li>
 <li><a href="TeamMinepixel.html" style="font-family: 'Joystix'">Team Minepixel</a></li>
 <li><a href="YouTube.html" style="font-family: 'Joystix'">YouTube</a></li>
 </ul>
