why do i really need comments? this isnt open source.. right?

--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -47,16 +47,16 @@ li a:hover:not(.active) {
     background-color: #0066ff;
 }
 </style>
-<link rel="icon" href="PikaBot01/source/images/icon.ico">
+<link rel="icon" href="source/images/icon.ico">
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
 </head>
-<body style="background-image:url('PikaBot01/source/images/background.png'); background-repeat:repeat-x; background-size:cover;">
+<body style="background-image:url('source/images/background.png'); background-repeat:repeat-x; background-size:cover;">
 <!--Dumb generator didn't want to give me the entire image, but wanted to give me a strip .-. -->
 <ul>
   <li><a class="active" href="../home.html" style="font-family: 'Techover'">Home</a></li>
   <li><a href="../commands.html" style="font-family: 'Techover'">News</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'Blippo'">PikaBot01</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Blippo'">A Bot For <img href="http://discorapp.com" src="PikaBot01/source/images/Discord-Logo.png" alt="Discord Logo" height="133" width="32.5" ></h1>
+<p style="text-align:center; font-size:175%; font-family: 'Blippo'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" height="133" width="32.5" ></h1>
 </body>
 </html>
