cant even life right now

--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -1,18 +1,18 @@
 <html>
 <head>
-<title>PikaDude - PikaBot01</title>
+<title>PikaDude - PikaBot01 - Home</title>
 <style>
 @font-face {
   font-family: 'Joystix';
-  src: url('PikaBot01/source/fonts/joystix.ttf');
+  src: url('source/fonts/joystix.ttf');
 }
 @font-face {
   font-family: 'Techover';
-  src: url('PikaBot01/source/fonts/techover.ttf');
+  src: url('source/fonts/techover.ttf');
 }
 @font-face {
   font-family: 'Blippo';
-  src: url('PikaBot01/source/fonts/blippo.ttf');
+  src: url('source/fonts/blippo.ttf');
 }
 body {margin:0;}
 
@@ -57,6 +57,6 @@ li a:hover:not(.active) {
   <li><a href="../commands.html" style="font-family: 'Techover'">News</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'Blippo'">PikaBot01</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Blippo'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" height="133" width="32.5" ></h1>
+<p style="text-align:center; font-size:175%; font-family: 'Blippo'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" ></h1>
 </body>
 </html>
