stuff happened woah

--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -54,9 +54,9 @@ li a:hover:not(.active) {
 <!--Dumb generator didn't want to give me the entire image, but wanted to give me a strip .-. -->
 <ul>
   <li><a class="active" href="../home.html" style="font-family: 'Blippo'">Home</a></li>
-  <li><a href="../commands.html" style="font-family: 'Blippo'">News</a></li>
+  <li><a href="../commands.html" style="font-family: 'Blippo'">Commands</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'Blippo'">PikaBot01</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Techover'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" style="float: right;"></h1>
+<p style="text-align:center; font-size:175%; font-family: 'Techover'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5"></h1>
 </body>
 </html>
