stuff happened woah

--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -21,7 +21,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #262626;
+    background-color: #4d4d4d;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -57,6 +57,6 @@ li a:hover:not(.active) {
   <li><a href="../commands.html" style="font-family: 'Blippo'">Commands</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'Blippo'">PikaBot01</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Techover'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5"></h1>
+<p style="text-align:center; font-size:175%; font-family: 'Techover'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" align="middle"></h1>
 </body>
 </html>
