stuff happened woah

--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -57,6 +57,6 @@ li a:hover:not(.active) {
   <li><a href="../commands.html" style="font-family: 'Blippo'">Commands</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'Blippo'">PikaBot01</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Techover'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" align="middle"></h1>
+<p style="text-align:center; font-size:175%; font-family: 'Blippo'">A Bot For <img href="http://discorapp.com" src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" align="top"></h1>
 </body>
 </html>
