--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -11,8 +11,8 @@
   src: url('source/fonts/techover.ttf');
 }
 @font-face {
-  font-family: 'Blippo';
-  src: url('source/fonts/blippo.ttf');
+  font-family: 'DejaVuSerif';
+  src: url('source/fonts/DejaVuSerif.ttf');
 }
 body {margin:0;}
 
@@ -53,10 +53,10 @@ li a:hover:not(.active) {
 <body style="background-image:url('source/images/background.png'); background-repeat:repeat-x;">
 <!--Dumb generator didn't want to give me the entire image, but wanted to give me a strip .-. -->
 <ul>
-  <li><a class="active" href="../home.html" style="font-family: 'Blippo'">Home</a></li>
-  <li><a href="../commands.html" style="font-family: 'Blippo'">Commands</a></li>
+  <li><a class="active" href="../home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
+  <li><a href="../commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
 </ul>
-<h1 style="text-align:center; font-size:350%; font-family: 'Blippo'">PikaBot01</h1>
-<p style="text-align:center; font-size:175%; font-family: 'Blippo'">A Bot For <a href="http://discordapp.com"><img src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" align="top"></img></a></h1>
+<h1 style="text-align:center; font-size:350%; font-family: 'DejaVuSerif'">PikaBot01</h1>
+<p style="text-align:center; font-size:175%; font-family: 'DejaVuSerif'">A Bot For <a href="http://discordapp.com"><img src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" align="top"></img></a></h1>
 </body>
 </html>
