--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -57,6 +57,7 @@ li a:hover:not(.active) {
   <li><a href="../commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'DejaVuSerif'">PikaBot01</h1>
+<img style="margin: 0px auto; display:block" src="source/images/PikaBot01.jpg" alt="PikaBot01" width="128" height="128" align="top"></img>
 <p style="text-align:center; font-size:175%; font-family: 'DejaVuSerif'">A Bot For <a href="http://discordapp.com"><img src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" align="top"></img></a></h1>
 </body>
 </html>
