--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>PikaDude - PikaBot01 - Home</title>
+<title>PikaDude - PikaBot01 - Commands</title>
 <style>
 @font-face {
   font-family: 'Joystix';
@@ -57,14 +57,3 @@ li a:hover:not(.active) {
 <p style="text-align:center; font-size:175%; font-family: 'DejaVuSerif'">A Bot For <a href="http://discordapp.com"><img src="source/images/Discord-Logo.png" alt="Discord Logo" width="133" height="32.5" align="top"></img></a></h1>
 <br>
 <br>
-<h2 style="font-family: 'DejaVuSerif';">What is PikaBot01?</h2>
-<p style="font-family: 'DejaVuSerif';">PikaBot01 is a robotic program that responds to certain messages or 'commands' that was coded using <a href="https://github.com/RogueException/Discord.Net">Discord.Net</a> and the coding language C#.</p>
-<h2 style="font-family: 'DejaVuSerif';">What can PikaBot01 do?</h2>
-<p style="font-family: 'DejaVuSerif';">PikaBot01 can do various things, from small games, memes and gambling to slapping, chatting, generating images and even more! For a full list go <a href="commands.html">here</a>.</p>
-<h2 style="font-family: 'DejaVuSerif';">How can I get PikaBot01 on my server?</h2>
-<p style="font-family: 'DejaVuSerif';">Type '>join' or '>invite' in a server that the bot already is on or click <a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot">here</a>.</p>
-<br>
-<br>
-<br>
-</body>
-</html>
