--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -55,8 +55,8 @@ th, td {
 </head>
 <body style="background-image:url('source/images/background.png'); background-repeat:repeat-x;">
 <ul>
-  <li><a class="active" href="../home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
-  <li><a href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
+  <li><a href="home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
+  <li><a class="active" href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'DejaVuSerif'">PikaBot01</h1>
 <img style="margin: 0px auto; display:block" src="source/images/PikaBot01.jpg" alt="PikaBot01" width="128" height="128" align="top"></img>
