--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -48,7 +48,7 @@ li a:hover:not(.active) {
 </head>
 <body style="background-image:url('source/images/background.png'); background-repeat:repeat-x;">
 <ul>
-  <li><a class="active" href="../home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
+  <li><a class="active" href="home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
   <li><a href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'DejaVuSerif'">PikaBot01</h1>
