woo! added commands list1

--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -57,6 +57,7 @@ th, td {
 <ul>
   <li><a href="home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
   <li><a class="active" href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
+  <li><a href="https://discord.gg/012P7BEh4fzkryZ6P" style="font-family: 'DejaVuSerif'">Support</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'DejaVuSerif'">PikaBot01</h1>
 <img style="margin: 0px auto; display:block" src="source/images/PikaBot01.jpg" alt="PikaBot01" width="128" height="128" align="top"></img>
@@ -67,18 +68,202 @@ th, td {
   <tr>
     <th>Command</th>
     <th>Description</th>
+	<th>Usage/Example</th>
     <th>Category</th>
   </tr>
   <tr>
-    <td>>help</td>
+    <td>Help</td>
     <td>Displays information about the bot.</td>
+	<td>>help</td>
     <td>Single Command</td>
   </tr>
   <tr>
-    <td>>commands</td>
+    <td>Commands</td>
     <td>Displays a link to this webpage that shows all the available commands.</td>
+	<td>>commands</td>
     <td>Single Command</td>
   </tr>
+  <tr>
+    <td>ChannelID</td>
+    <td>Displays the current channel id or the specified channel id.</td>
+	<td>>channelid<br>>channelid #general</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>MCSkin</td>
+    <td>Looks up the specified Minecraft User's Minecraft Skin</td>
+	<td>>mcskin PikaDude01</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>Join/Invite</td>
+    <td>Two commands that do the same thing. They send a link that allows people to add PikaBot01 to a server where they have the Manage Server permission.</td>
+	<td>>join<br>>invite</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>ServerInfo</td>
+    <td>Displays information about the current server</td>
+	<td>>serverinfo</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>TMSay</td>
+    <td>Sends a message to the official Team Minepixel Minecraft Server</td>
+	<td>>tmsay Hello Team Minepixel!<br>>tmsay hello world!</td>
+    <td>TM MC Server Integration</td>
+  </tr>
+  <tr>
+    <td>TMList</td>
+    <td>Lists all the users currently on the official Team Minepixel Minecraft Server</td>
+	<td>>tmlisr</td>
+    <td>TM MC Server Integration</td>
+  </tr>
+  <tr>
+    <td>TMStatus</td>
+    <td>Displays statistical information about the official Team Minepixel Minecraft Server</td>
+	<td>>tmstatus</td>
+    <td>TM MC Server Integration</td>
+  </tr>
+  <tr>
+    <td>Lenny</td>
+    <td>( ͡° ͜ʖ ͡°)</td>
+	<td>>lenny</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>Roll</td>
+    <td>Rolls a random number between 1 and 6</td>
+	<td>>roll</td>
+    <td>Rolling Command</td>
+  </tr>
+  <tr>
+    <td>DoubleRoll</td>
+    <td>Rolls two random numbers between 1 and 6 and then adds them together</td>
+	<td>>doubleroll</td>
+    <td>Rolling Command</td>
+  </tr>
+  <tr>
+    <td>MegaRoll</td>
+    <td>Rolls a random number between 1 and 1000</td>
+	<td>>megaroll</td>
+    <td>Rolling Command</td>
+  </tr>
+  <tr>
+    <td>GigaRoll</td>
+    <td>Rolls a random number between 1 and 1000000</td>
+	<td>>gigaroll</td>
+    <td>Rolling Command</td>
+  </tr>
+  <tr>
+    <td>ExtremeRoll</td>
+    <td>Rolls a random number between 1 and 1000000000</td>
+	<td>>extremeroll</td>
+    <td>Rolling Command</td>
+  </tr>
+  <tr>
+    <td>BlowStuffUp</td>
+    <td><i>explodes<i></td>
+	<td>>blowstuffup</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>Haha</td>
+    <td>lmao</td>
+	<td>>haha</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>Slap</td>
+    <td>Slaps the specified user</td>
+	<td>>slap @PikaDude01</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>Note</td>
+    <td>Lists all the commands to do with notes</td>
+	<td>>note<br>>note [subcommand]</td>
+    <td>Note Command</td>
+  </tr>
+  <tr>
+    <td>Coins</td>
+    <td>Lists all the commands to do with coins</td>
+	<td>>coins<br>>coins [subcommand]</td>
+    <td>Coins Command</td>
+  </tr>
+  <tr>
+    <td>Gamble</td>
+    <td>Use 1 coins to play the slot machine in hope to gain more coins</td>
+	<td>>gamble</td>
+    <td>Coins Command</td>
+  </tr>
+  <tr>
+    <td>AsciiMemes</td>
+    <td>All commands to do with Ascii Memes!</td>
+	<td>>asciimemes<br>>asciimemes random<br>>asciimemes kappa</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>@PikaBot01</td>
+    <td>Chat with PikaBot01</td>
+	<td>@PikaBot01 hello!<br>@PikaBot01 you are so cool!</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>>poll</td>
+    <td>Shows the weekly poll!</td>
+	<td>>poll<br>>poll [subcommand]</td>
+    <td>Poll Command</td>
+  </tr>
+  <tr>
+    <td>Call</td>
+    <td>Call a random server to talk! (Like Omegle)</td>
+	<td>>call</td>
+    <td>Call Command</td>
+  </tr>
+  <tr>
+    <td>Hangup</td>
+    <td>Destroys a call</td>
+	<td>>hangup</td>
+    <td>Call Command</td>
+  </tr>
+  <tr>
+    <td>Triggered</td>
+    <td>memes</td>
+	<td>>triggered</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>QRCreate</td>
+    <td>Creates a qr code with the specified text!</td>
+	<td>>qrcreate hello world!<br>>qrcreate [text]</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>Print</td>
+    <td>Prints the specified text in comic sans!</td>
+	<td>>print COMIC SANS IS BEST FONT!<br>>print [text]</td>
+    <td>Single Command</td>
+  </tr>
+  <tr>
+    <td>Kick</td>
+    <td>Kicks the specified user</td>
+	<td>>kick @ReallyAnnoyingGuy</td>
+    <td>Moderation Command</td>
+  </tr>
+  <tr>
+    <td>Ban</td>
+    <td>Bans the specified user</td>
+	<td>>ban @ReallyAnnoyingGuy</td>
+    <td>Moderation Command</td>
+  </tr>
 </table>
+  <br>
+  <br>
+  <br>
+  <a href="https://discord.gg/012P7BEh4fzkryZ6P" style="text-align:center; font-size:175%; font-family: 'DejaVuSerif'">If you need any help, feel free to visit the Official PikaBot01 Discord Server!</a>
+  <br>
+  <br>
+  <br>
 </body>
 </html>
