--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -50,6 +50,7 @@ li a:hover:not(.active) {
 <ul>
   <li><a class="active" href="home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
   <li><a href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
+  <li><a href="https://discord.gg/012P7BEh4fzkryZ6P" style="font-family: 'DejaVuSerif'">Support</a></li>
 </ul>
 <h1 style="text-align:center; font-size:350%; font-family: 'DejaVuSerif'">PikaBot01</h1>
 <img style="margin: 0px auto; display:block" src="source/images/PikaBot01.jpg" alt="PikaBot01" width="128" height="128" align="top"></img>
