--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ nav > ul > li > a {
 <li><a href="index.html" style="font-family: 'Joystix'">Home</a></li>
 <li><a href="PikaBot01/home.html" style="font-family: 'Joystix'">PikaBot01</a></li>
 <li><a href="TeamMinepixel.html" style="font-family: 'Joystix'">Team Minepixel</a></li>
+<li><a href="Twitch.html" style="font-family: 'Joystix'">Twitch</a></li>
 <li><a href="YouTube.html" style="font-family: 'Joystix'">YouTube</a></li>
 </ul>
 </nav>
