--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -265,5 +265,11 @@ th, td {
   <br>
   <br>
   <br>
+  <script id="_wau1rc">var _wau = _wau || [];
+_wau.push(["tab", "wrw1764086j4", "1rc", "left-middle"]);
+(function() {var s=document.createElement("script"); s.async=true;
+s.src="http://widgets.amung.us/tab.js";
+document.getElementsByTagName("head")[0].appendChild(s);
+})();</script>
 </body>
 </html>
