--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -67,7 +67,7 @@ li a:hover:not(.active) {
 <br>
 <br>
 <script id="_wau1rc">var _wau = _wau || [];
-_wau.push(["tab", "wrw1764086j4", "1rc", "left-middle"]);
+_wau.push(["tab", "wrw1764086j4", "1rc", "bottom-right"]);
 (function() {var s=document.createElement("script"); s.async=true;
 s.src="http://widgets.amung.us/tab.js";
 document.getElementsByTagName("head")[0].appendChild(s);
