fixed a few typos

--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -193,7 +193,7 @@ th, td {
   </tr>
   <tr>
     <td>Gamble</td>
-    <td>Use 1 coins to play the slot machine in hope to gain more coins</td>
+    <td>Use 1 coin to play the slot machine in hope to gain more coins</td>
 	<td>>gamble</td>
     <td>Coins Command</td>
   </tr>
@@ -210,7 +210,7 @@ th, td {
     <td>Single Command</td>
   </tr>
   <tr>
-    <td>>poll</td>
+    <td>Poll</td>
     <td>Shows the weekly poll!</td>
 	<td>>poll<br>>poll [subcommand]</td>
     <td>Poll Command</td>
