--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ nav > ul > li > a {
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">Direct yourself using the buttons above</p>
 <img style="margin: 0px auto; display:block" src="index/source/images/pika.png" alt="PikaDude" height="200" width="200" >
 <script id="_wau1rc">var _wau = _wau || [];
-_wau.push(["tab", "wrw1764086j4", "1rc", "left-top"]);
+_wau.push(["tab", "wrw1764086j4", "1rc", "left-middle"]);
 (function() {var s=document.createElement("script"); s.async=true;
 s.src="http://widgets.amung.us/tab.js";
 document.getElementsByTagName("head")[0].appendChild(s);
