added cat command

--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -257,6 +257,12 @@ th, td {
 	<td>>ban @ReallyAnnoyingGuy</td>
     <td>Moderation Command</td>
   </tr>
+  <tr>
+    <td>Cat</td>
+    <td>Displays a random cat gif (a bit slow at the moment)</td>
+	<td>>cat</td>
+    <td>Random Image Command</td>
+  </tr>
 </table>
   <br>
   <br>
