--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -63,9 +63,8 @@ li a:hover:not(.active) {
 <p style="font-family: 'DejaVuSerif';">PikaBot01 can do various things, from small games, memes and gambling to slapping, chatting, generating images and even more! For a full list go <a href="commands.html">here</a>.</p>
 <h2 style="font-family: 'DejaVuSerif';">How can I get PikaBot01 on my server?</h2>
 <p style="font-family: 'DejaVuSerif';">Type '>join' or '>invite' in a server that the bot already is on or click <a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot">here</a>.</p>
-<br>
-<br>
-<br>
+<h2 style="font-family: 'DejaVuSerif';">PikaBot's Official Discord Server</h2>
+<iframe src="https://discordapp.com/widget?id=185970479134146560&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 <script id="_wau1rc">var _wau = _wau || [];
 _wau.push(["tab", "wrw1764086j4", "1rc", "bottom-right"]);
 (function() {var s=document.createElement("script"); s.async=true;
