added some stuff

--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@ nav > ul > li > a {
 }
 </style>
 <link rel="icon" href="index/source/images/icon.ico">
+<meta name="description" content="Welcome to my site, we have cookies">
+<meta name="keywords" content="pikadude, pikadude01, teamminepixel, team minepixel, tm, pikabot01, pika, dude">
+<meta property="og:title" content="PikaDude - Home">
+<meta property="og:description" content="Welcome to my site, we have cookies">
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size:cover;">
+<!--Hey! What do you think you're looking at?-->
 <nav>
 <ul>
 <li><a href="index.html" style="font-family: 'Joystix'">Home</a></li>
@@ -55,6 +60,7 @@ nav > ul > li > a {
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">Programmer, Gamer, YouTuber and Twitch Streamer</p>
 <p style="text-align:center; font-size:175%; font-family: 'Joystix'">Direct yourself using the buttons above</p>
 <img style="margin: 0px auto; display:block" src="index/source/images/pika.png" alt="PikaDude" height="200" width="200" >
+<!--This code below makes the final product code look so messy-->
 <script id="_wau1rc">var _wau = _wau || [];
 _wau.push(["tab", "wrw1764086j4", "1rc", "left-middle"]);
 (function() {var s=document.createElement("script"); s.async=true;
