--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -52,6 +52,10 @@ th, td {
 </style>
 <link rel="icon" href="source/images/icon.ico">
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
+<meta name="description" content="The official command list of PikaBot01. What else did you expect this to say?!">
+<meta name="keywords" content="pikadude, pikadude01, pikabot01, pika, dude">
+<meta property="og:title" content="PikaDude - PikaBot01 - Commands">
+<meta property="og:description" content="The official command list of PikaBot01. What else did you expect this to say?!">
 </head>
 <body style="background-image:url('source/images/background.png'); background-repeat:repeat-x;">
 <ul>
