--- a/404.html
+++ b/404.html
@@ -1,6 +1,19 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>404 NOT FOUND</title>
+<title>insert dumb name here</title>
+<link rel="stylesheet" type="text/css" href="csshake\dist\csshake.min.css">
+<link rel="icon" href="index/source/images/icon.ico">
+<script src="music.js"></script>
 </head>
-<body>this is not the page you are looking for</body>
+<body>
+<!-- SCM Music Player http://scmplayer.net -->
+<script type="text/javascript" src="http://scmplayer.net/script.js" 
+data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':true,'shuffle':false,'repeat':2,'placement':'top','showplaylist':false,'playlist':[{'title':'Memes','url':'https://www.youtube.com/watch?v=_1qXQRpF08E'}]}" ></script>
+<!-- SCM Music Player script end -->
+<!--Ah, don't you love poorly coded websites?-->
+<br>
+<br>
+<p title="wat u lookin' at?" class="shake-slow shake-constant" style="font-size:500%; width:100%; text-align:center;">404<br>Page not found</p>
+</body>
 </html>
