--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>PikaDude - PikaBot01 - Home</title>
@@ -47,8 +48,6 @@ li a:hover:not(.active) {
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
 <meta name="description" content="The official homepage of PikaBot01. What else did you expect this to say?!">
 <meta name="keywords" content="pikadude, pikadude01, pikabot01, pika, dude">
-<meta property="og:title" content="PikaDude - PikaBot01 - Home">
-<meta property="og:description" content="The official homepage of PikaBot01. What else did you expect this to say?!">
 </head>
 <body style="background-image:url('source/images/background.png'); background-repeat:repeat-x;">
 <ul>
@@ -68,7 +67,7 @@ li a:hover:not(.active) {
 <h2 style="font-family: 'DejaVuSerif';">How can I get PikaBot01 on my server?</h2>
 <p style="font-family: 'DejaVuSerif';">Type '>join' or '>invite' in a server that the bot already is on or click <a href="https://discordapp.com/oauth2/authorize?&client_id=169678426360381451&scope=bot">here</a>.</p>
 <h2 style="font-family: 'DejaVuSerif';">PikaBot's Official Discord Server</h2>
-<iframe src="https://discordapp.com/widget?id=185970479134146560&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+<iframe src="https://discordapp.com/widget?id=185970479134146560&theme=light" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 <script id="_wau1rc">var _wau = _wau || [];
 _wau.push(["tab", "wrw1764086j4", "1rc", "bottom-right"]);
 (function() {var s=document.createElement("script"); s.async=true;
