--- a/404.html
+++ b/404.html
@@ -4,12 +4,19 @@
 <title>insert dumb name here</title>
 <link rel="stylesheet" type="text/css" href="csshake\dist\csshake.min.css">
 <link rel="icon" href="index/source/images/icon.ico">
-<script src="music.js"></script>
+<script src="404/sauce/music.js"></script>
+<audio id="audio" autoplay="autoplay" loop="" style="display: none;" src="404/sauce/2sad4me.mp3"></audio>
 </head>
 <body>
 <!--Don't you love poorly coded websites?-->
 <br>
 <br>
 <p title="wat u lookin' at?" class="shake-slow shake-constant" style="font-size:500%; width:100%; text-align:center;">404<br>Page not found</p>
+<span title="just thought i would say that i own none of these songs" class="shake-chunk shake-constant"id="song"></span>
+<br>
+<br>
+<br>
+<br>
+<a href="index.html" title="nah mate, i don't shake">Back To Index</a>
 </body>
 </html>
