--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ nav > ul > li > a {
 <meta name="keywords" content="pikadude, pikadude01, teamminepixel, team minepixel, tm, pikabot01, pika, dude">
 </head>
 <body style="background-image:url('index/source/images/background.jpg'); background-repeat: no-repeat; background-size:cover;">
-<!--Hey! What do you think you're looking at?-->
+<!--Hey! What do you think you're looking at, huh?-->
 <nav>
 <ul>
 <li><a href="index.html" style="font-family: 'Joystix'">Home</a></li>
