think i finished the 404 page

--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>insert dumb name here</title>
-<link rel="stylesheet" type="text/css" href="csshake\dist\csshake.min.css">
-<link rel="icon" href="index/source/images/icon.ico">
-<script src="404/sauce/music.js"></script>
-<audio id="audio" autoplay="autoplay" loop="" style="display: none;" src="404/sauce/2sad4me.mp3"></audio>
+<link rel="stylesheet" type="text/css" href="404/sauce/addons/csshake.min.css">
+<link rel="icon" href="404/sauce/images/icon.ico">
+<script src="404/sauce/addons/music.js"></script>
+<audio id="audio" autoplay="autoplay" loop="" style="display: none;" src="404/sauce/music/2sad4me.mp3"></audio>
 </head>
 <body>
 <!--Don't you love poorly coded websites?-->
