think i finished the 404 page

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="404/sauce/addons/csshake.min.css">
 <link rel="icon" href="404/sauce/images/icon.ico">
 <script src="404/sauce/addons/music.js"></script>
-<audio id="audio" autoplay="autoplay" loop="" style="display: none;" src="404/sauce/music/2sad4me.mp3"></audio>
+<audio id="audio" autoplay="autoplay" loop="" style="display: none;"></audio>
 </head>
 <body>
 <!--Don't you love poorly coded websites?-->
