--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>insert dumb name here</title>
-<link rel="stylesheet" type="text/css" href="404/sauce/addons/csshake.min.css">
-<link rel="icon" href="404/sauce/images/icon.ico">
-<script src="404/sauce/addons/music.js"></script>
+<link rel="stylesheet" type="text/css" href="/404/sauce/addons/csshake.min.css">
+<link rel="icon" href="/404/sauce/images/icon.ico">
+<script src="/404/sauce/addons/music.js"></script>
 <audio id="audio" autoplay="autoplay" loop="" style="display: none;"></audio>
 </head>
 <body>
