--- a/earthquake.html
+++ b/earthquake.html
@@ -9,7 +9,7 @@
 <body style="background-image:url('earthquake/source/images/background.jpg'); background-repeat: no-repeat; background-size:cover;">
 <img class="shake-horizontal shake-constant" style="margin: 100 auto; display:block; position:absolute" src="earthquake/source/images/land.png" alt="land" height="500" width="1300">
 <p class="shake-crazy shake-constant" style="font-family: 'Comic Sans MS'; font-size:400%; margin: 50 100; position:absolute;">EARTHQUAKE</p>
-<img class="shake-vertical shake-constant" style="margin: 350 270; display:block; position:absolute" src="earthquake/source/images/dude1.png" alt="foreground-dude" height="150" width="150">
+<img class="shake-rotate shake-constant" style="margin: 350 270; display:block; position:absolute" src="earthquake/source/images/dude1.png" alt="foreground-dude" height="150" width="150">
 <img class="shake-slow shake-constant" style="margin: 325 700; display:block; position:absolute" src="earthquake/source/images/dude2.png" alt="background-dude" height="50" width="50">
 <img class="shake-hard shake-constant" style="margin: 400 900; display:block; position:absolute;" src="earthquake/source/images/dude3.png" alt="seizure-dude" height="125" width="125">
 <!--"Who Likes To Party" Kevin MacLeod (incompetech.com)
