--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@ nav > ul > li > a {
     padding: 0.5em 0.5em;
     text-decoration: none;
 }
+html{
+	/* This image will be displayed fullscreen */
+	background:url('background-image.jpg') no-repeat center center;
+
+	/* Ensure the html element always takes up the full height of the browser window */
+	min-height:100%;
+
+	/* The Magic */
+	background-size:cover;
+}
 </style>
 <link rel="icon" href="index/source/images/icon.ico">
 <meta name="description" content="Welcome to my site, we have cookies">
