--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -43,6 +43,20 @@ li a:hover:not(.active) {
 .active {
     background-color: #0066ff;
 }
+html{
+	/* This image will be displayed fullscreen */
+	background:url('background.jpg') no-repeat center center;
+
+	/* Ensure the html element always takes up the full height of the browser window */
+	min-height:100%;
+
+	/* The Magic */
+	background-size:cover;
+}
+body{
+	/* Workaround for some mobile browsers */
+	min-height:100%;
+}
 </style>
 <link rel="icon" href="source/images/icon.ico">
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
