--- a/PikaBot01/commands.html
+++ b/PikaBot01/commands.html
@@ -50,13 +50,27 @@ table, th, td {
 th, td {
     padding: 5px;
 }
+html{
+	/* This image will be displayed fullscreen */
+	background:url('source/images/background.png') no-repeat center center;
+
+	/* Ensure the html element always takes up the full height of the browser window */
+	min-height:100%;
+
+	/* The Magic */
+	background-size:cover;
+}
+body{
+	/* Workaround for some mobile browsers */
+	min-height:100%;
+}
 </style>
 <link rel="icon" href="source/images/icon.ico">
 <a href="../index.html" style="font-family: 'Joystix' "><<-- Back to index</a>
 <meta name="description" content="The official command list of PikaBot01. What else did you expect this to say?!">
 <meta name="keywords" content="pikadude, pikadude01, pikabot01, pika, dude">
 </head>
-<body style="background-image:url('source/images/background.png'); background-repeat:repeat-x;">
+<body>
 <ul>
   <li><a href="home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
   <li><a class="active" href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
