--- a/PikaBot01/home.html
+++ b/PikaBot01/home.html
@@ -45,7 +45,7 @@ li a:hover:not(.active) {
 }
 html{
 	/* This image will be displayed fullscreen */
-	background:url('background.jpg') no-repeat center center;
+	background:url('source/images/background.png') no-repeat center center;
 
 	/* Ensure the html element always takes up the full height of the browser window */
 	min-height:100%;
@@ -63,7 +63,7 @@ body{
 <meta name="description" content="The official homepage of PikaBot01. What else did you expect this to say?!">
 <meta name="keywords" content="pikadude, pikadude01, pikabot01, pika, dude">
 </head>
-<body style="background-image:url('source/images/background.png'); background-repeat:repeat-x;">
+<body>
 <ul>
   <li><a class="active" href="home.html" style="font-family: 'DejaVuSerif'">Home</a></li>
   <li><a href="commands.html" style="font-family: 'DejaVuSerif'">Commands</a></li>
