--- a/earthquake.html
+++ b/earthquake.html
@@ -9,7 +9,7 @@
 <style>
   html{
 	/* This image will be displayed fullscreen */
-	background:url('background-image.jpg') no-repeat center center;
+	background:url('earthquake/source/images/background.jpg') no-repeat center center;
 
 	/* Ensure the html element always takes up the full height of the browser window */
 	min-height:100%;
